--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "html-webpack-plugin": "^2.22.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
-    "react-apollo": "^0.5.13",
+    "react-apollo": "0.5.10",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
