--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^2.22.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
+    "react-addons-update": "^15.3.2",
     "react-apollo": "0.5.16",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
