--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "react-addons-update": "^15.3.2",
     "react-apollo": "0.5.16",
     "react-dom": "^15.3.2",
+    "react-facebook-login": "^3.4.0",
+    "react-google-login": "^2.5.8",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-actions": "^0.13.0",
     "stats-webpack-plugin": "^0.4.2",
     "subscriptions-transport-ws": "^0.3.0",
     "webpack-dev-middleware": "^1.8.4",
